new de voucher sur footer

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -5,8 +5,8 @@
                       <p class="card-text"> What's your mission will be ?<%= @mission.description %></p>
                       <p class="card-text">Your dress code<%= @mission.dess_code %></p>
                       <p class="card-text"><%= @mission.duration %>hours</p>
-                      <% if mission.photo_url.present? %>
-                          <%= image_tag mission.photo_url, class: "mission-image" %>
+                      <% if @mission.photo_url.present? %>
+                          <%= image_tag @mission.photo_url, class: "mission-image" %>
                       <% end %>
 
                   <p><% if current_user == @mission.user  %>
