--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,7 +7,8 @@
     <i class="fa-solid fa-calendar"></i>
   <% end %>
 
-  <%= link_to new_booking_voucher_path(current_user.bookings.last) do %>
+  <%= link_to missions_path do %>
+  <%# <%= link_to new_booking_voucher_path(current_user.bookings.last) do %>
     <i class="fa-solid fa-wallet"></i>
   <% end %>
 
