--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,7 +7,7 @@
     <i class="fa-solid fa-calendar"></i>
   <% end %>
 
-  <%= link_to new_booking_voucher_path(current_user.bookings.last) do %>
+  <%= link_to profile_path do %>
     <i class="fa-solid fa-wallet"></i>
   <% end %>
 
@@ -19,3 +19,4 @@
     <i class="fas fa-user"></i>
   <% end %>
 </div>
+<%# new_booking_voucher_path(current_user.bookings.last) %>
