--- a/app/views/vouchers/show.html.erb
+++ b/app/views/vouchers/show.html.erb
@@ -1,12 +1,11 @@
 <h1> your "show" wallet</h1>
-<%# <%= @svg.html_safe %>
+<%= @svg.html_safe %>
 
 <%# <%= simple_form_for([@booking, @voucher]) do |f| %>
   <%# <%= f.text_area :total_points, style: 'display:none' %>
-  <%# <strong>👉<%= f.submit "I completed my mission ", class: "btn btn-success"%> 👈 </strong>
+  <%# <strong><%= f.submit "I completed my mission ", class: "btn btn-success"%>
 <%# <% end %>
 <%#
 <%= @voucher.code %>
 
-<p><%=  @code.as_svg </p>
-<%= @voucher.code %>
+<%# <p><%=  @code.as_svg </p> %>
