--- a/app/views/vouchers/show.html.erb
+++ b/app/views/vouchers/show.html.erb
@@ -1,4 +1,8 @@
-<h1> your "show" wallet</h1>
+ 
+  <h1>Scan this QR code to use it in our different partners</h1>
+
+
+
 <%= @svg.html_safe %>
 
 <%# <%= simple_form_for([@booking, @voucher]) do |f| %>
@@ -7,5 +11,3 @@
 <%# <% end %>
 <%#
 <%= @voucher.code %>
-
-<%# <p><%=  @code.as_svg </p> %>
