--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -98,7 +98,7 @@
       <i class="fa-solid fa-calendar"></i>
     <% end %>
 
-    <%= link_to missions_path do %>
+    <%= link_to new_booking_voucher_path(current_user.bookings.last) do %>
       <i class="fa-solid fa-wallet"></i>
     <% end %>
 
