--- a/app/views/vouchers/new.html.erb
+++ b/app/views/vouchers/new.html.erb
@@ -1,8 +1,11 @@
                                               <h1>Wallet</h1>
 
-<strong> to Unlocked your  <%= @booking.mission.reward %> points for this mission click on the button below </strong>
-<br>
-<%= simple_form_for([@booking, @voucher]) do |f| %>
-  <%= f.text_area :total_points, style: 'display:none' %>
-  <strong>👉<%= f.submit "I completed my mission ", class: "btn btn-success"%> 👈 </strong>
-<% end %>
+<%# afficher voucher et leur
+points
+
+
+aficher le nb de points de la mission
+afficher le total_points
+puis afficher la possibilité de crrer un voucher pour un nombre de points affecté par l'utilisateur %>
+
+
