--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="footer">
-  <%= link_to missions_path do %>
+  <%= link_to root_path do %>
     <i class="fas fa-home"></i>
   <% end %>
 
@@ -7,10 +7,10 @@
     <i class="fa-solid fa-calendar"></i>
   <% end %>
 
-  <%= link_to missions_path do %>
-  <%# <%= link_to new_booking_voucher_path(current_user.bookings.last) do %>
-    <i class="fa-solid fa-wallet"></i>
-  <% end %>
+  <%# <%= link_to missions_path do %>
+  <%# <%= link_to booking_voucher_path(@voucher) do %>
+    <%# <i class="fa-solid fa-wallet"></i> %>
+  <%# <% end %>
 
   <%= link_to missions_path do %>
     <i class="fa-solid fa-comments"></i>
