--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -90,7 +90,7 @@
   <br>
 
   <div class="footer">
-    <%= link_to missions_path do %>
+    <%= link_to root_path do %>
       <i class="fas fa-home"></i>
     <% end %>
 
@@ -98,7 +98,7 @@
       <i class="fa-solid fa-calendar"></i>
     <% end %>
 
-    <%= link_to new_booking_voucher_path(current_user.bookings.last) do %>
+    <%= link_to booking_voucher_path(@voucher)  do %>
       <i class="fa-solid fa-wallet"></i>
     <% end %>
 
