--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,10 +7,11 @@
     <i class="fa-solid fa-calendar"></i>
   <% end %>
 
-  <%= link_to missions_path do %>
-  <%# <%= link_to new_booking_voucher_path(current_user.bookings.last) do %>
-    <i class="fa-solid fa-wallet"></i>
-  <% end %>
+ <% if current_user && Booking.all != [] %>
+      <%= link_to new_booking_voucher_path(current_user.bookings.last) do %>
+        <i class="fa-solid fa-wallet"></i>
+      <% end %>
+ <% end %>
 
   <%= link_to missions_path do %>
     <i class="fa-solid fa-comments"></i>
@@ -21,3 +22,6 @@
   <% end %>
 </div>
 <%# new_booking_voucher_path(current_user.bookings.last) %>
+
+
+<%# <%= link_to missions_path do %>
