--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -18,16 +18,18 @@
                   <%# si id de booking exist %>
 
 
-      <p> Your wallet is unlocked</p>
+      <p>  Find your wallet here </p>
 
               <% @vouchers.each do |voucher| %>
                 <%# <strong> You unlocked</strong> <%= voucher.booking.mission.reward %>
-                 <strong> to Unlocked your  <%= voucher.booking.mission.reward %> points for this mission click on the button below </strong>
+                 <strong>  You have  <%= voucher.booking.mission.reward %> points for this mission  </strong>
+                  <%# <strong> You unlocked </strong> <%= @voucher.booking.mission.reward %>
                     <br>
+
+              <p> Click on the link to generate the QR code "voucher" </p>
+              <%= link_to "Generate voucher",  booking_voucher_path(voucher.booking, voucher) %>
               <% end %>
-
-
-
+            <%# (voucher.booking) %>
       <br>
       <div class="green-line"></div>
       <br>
@@ -48,6 +50,8 @@
                   <div class="booking-time"><%= booking.mission.title %></div>
                   <div class="booking-time"><%= booking.mission.start_date %></div>
                   <div class="booking-time"><%= booking.mission.end_date %></div>
+
+                  <strong> to Unlocked your points for this mission click on the button below </strong>
                   <% if booking.vouchers.empty?  %>
                     <%= simple_form_for([booking, @voucher]) do |f| %>
                         <%= f.text_area :total_points, style: 'display:none' %>
@@ -116,26 +120,11 @@
       <i class="fa-solid fa-calendar"></i>
     <% end %>
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> 84a7a4b2afcdc9cba3e33eb934cc686733893ce0
-    <% if current_user %>
-      <%= link_to new_booking_voucher_path(current_user.bookings.last) do %>
+    <%# <% if current_user %>
+      <%= link_to profile_path do %>
         <i class="fa-solid fa-wallet"></i>
       <% end %>
-<<<<<<< HEAD
-=======
-    <%= link_to booking_voucher_path(@voucher)  do %>
-      <i class="fa-solid fa-wallet"></i>
->>>>>>> 792fc4df1556d866854d328d49b6c15026fa8fda
-=======
-      
-    <%= link_to booking_voucher_path(@voucher)  do %>
-      <i class="fa-solid fa-wallet"></i>
-
->>>>>>> 84a7a4b2afcdc9cba3e33eb934cc686733893ce0
-    <% end %>
+    <%# <% end %>
 
     <%= link_to missions_path do %>
       <i class="fa-solid fa-comments"></i>
