--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,29 +7,16 @@
     <i class="fa-solid fa-calendar"></i>
   <% end %>
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
 
->>>>>>> 84a7a4b2afcdc9cba3e33eb934cc686733893ce0
- <% if current_user && Booking.all != [] %>
-      <%= link_to new_booking_voucher_path(current_user.bookings.last) do %>
+ <%# <% if current_user && Booking.all != [] %>
+      <%= link_to profile_path do %>
         <i class="fa-solid fa-wallet"></i>
       <% end %>
- <% end %>
-<<<<<<< HEAD
-=======
-=======
 
->>>>>>> 84a7a4b2afcdc9cba3e33eb934cc686733893ce0
-  <%# <%= link_to missions_path do %>
+
   <%# <%= link_to booking_voucher_path(@voucher) do %>
     <%# <i class="fa-solid fa-wallet"></i> %>
   <%# <% end %>
-<<<<<<< HEAD
->>>>>>> 792fc4df1556d866854d328d49b6c15026fa8fda
-=======
->>>>>>> 84a7a4b2afcdc9cba3e33eb934cc686733893ce0
 
   <%= link_to missions_path do %>
     <i class="fa-solid fa-comments"></i>
