--- a/app/views/vouchers/show.html.erb
+++ b/app/views/vouchers/show.html.erb
@@ -1,10 +1,8 @@
 
+ <%# <strong> You unlocked </strong> <%= @voucher.booking.mission.reward %>
 
-
-
-
-<h1>Scan this QR code to use it in our different partners</h1>
-<%= @svg.html_safe %>
+  <h1>Scan this QR code to use it in our different partners</h1>
+              <%= @svg.html_safe %>
 
 <%# <%= simple_form_for([@booking, @voucher]) do |f| %>
   <%# <%= f.text_area :total_points, style: 'display:none' %>
