search bar to map

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -98,7 +98,7 @@
       <i class="fa-solid fa-calendar"></i>
     <% end %>
 
-    <%= link_to booking_voucher_path(@voucher)  do %>
+    <%= link_to profile_path  do %>
       <i class="fa-solid fa-wallet"></i>
     <% end %>
 
