--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,10 @@
 
 
 
-  <body><%= render "shared/navbar" %>
+  <body>
+    <% unless ( controller_name == "pages" && action_name == "home")%>
+      <%= render "shared/navbar" %>
+    <% end %>
     <%= render "shared/flashes" %>
     <%= yield %>
 
