--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -61,10 +61,11 @@
   <div class="horizontal-separator"></div>
   <br>
   <p class="text-join-us">+100 Partners</p>
-
     <div class="logo-carousel">
-      <div class="carousel-container slide-track">
-        <div class="logo-item"><%= image_tag('Decathlon-logo.png') %></div>
+      <div class="carousel-container-logo slide-track">
+        <div class="logo-item"><%= image_tag('AMOr-benamor.png') %></div>
+        <div class="logo-item"><%= image_tag('Lidl-Logo.png') %></div>
+        <div class="logo-item"><%= image_tag('Fnac_Logo.png') %></div>
         <div class="logo-item"><%= image_tag('flyer-cafe-barbesbd.jpg') %></div>
         <div class="logo-item"><%= image_tag('Emblema-Carrefour.png') %></div>
         <div class="logo-item"><%= image_tag('Hamoud_logo.png') %></div>
@@ -72,14 +73,12 @@
         <div class="logo-item"><%= image_tag('mecca-cola-logo-png-transparent.png') %></div>
         <div class="logo-item"><%= image_tag('Darty.png') %></div>
         <div class="logo-item"><%= image_tag('pv.png') %></div>
-        <div class="logo-item"><%= image_tag('AMOr-benamor.png') %></div>
-        <div class="logo-item"><%= image_tag('Lidl-Logo.png') %></div>
-        <div class="logo-item"><%= image_tag('Fnac_Logo.png') %></div>
+        <div class="logo-item"><%= image_tag('Decathlon-logo.png') %></div>
+      </div>
     </div>
 </div>
 
-<br>
-<br>
+
 
 <div class="container third-para">
   <h2 class="title-p3-home text-center">Community</h2>
@@ -93,20 +92,20 @@
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
 
         </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <%= image_tag('Test-1.jpg') %>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <%= image_tag('Test-1.jpg') %>
+          </div>
+          <div class="carousel-item">
+              <%= image_tag('Test-2.jpg') %>
+          </div>
+          <div class="carousel-item">
+              <%= image_tag('Test-3.jpg') %>
+          </div>
+          <div class="carousel-item">
+              <%= image_tag('Test-4.jpg') %>
+          </div>
         </div>
-        <div class="carousel-item">
-            <%= image_tag('Test-2.jpg') %>
-        </div>
-        <div class="carousel-item">
-            <%= image_tag('Test-3.jpg') %>
-        </div>
-        <div class="carousel-item">
-            <%= image_tag('Test-4.jpg') %>
-        </div>
-      </div>
 
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -139,6 +138,4 @@
   <p class="text-center">CONTACT: support@earth-care-project.com</p>
   <p class="text-center">21 rue Haxo, 13001 Marseille</p>
   <br>
-</div>
-
 </div>
