--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -40,10 +40,10 @@
                   <%# si id de booking exist %>
                 <% else %>
                   <%= simple_form_for [@mission, @booking] do |f| %>
-                    <%= f.submit "Accept", class: "btn btn-success" %>
+                    <%= f.submit "Yep", class: "btn btn-success" %>
                   <% end %>
                   <%= simple_form_for [@mission, @declined_booking] do |f| %>
-                    <%= f.submit "Decline", class: "btn btn-warning" %>
+                    <%= f.submit "Nop'", class: "btn btn-warning" %>
                   <% end %>
                 <% end %>
               <% end %>
@@ -51,7 +51,10 @@
             </div>
 
             <div class="text-center mt-2">
-              <div style="width: 100%; height: 500px;"
+              <div style="width: 100%;
+                  height: 500px;
+                  border-radius: 20px;
+                  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);"
                 data-controller="map"
                 data-map-markers-value="<%= @mission_marker.to_json %>"
                 data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
@@ -59,8 +62,6 @@
             </div>
           </div>
         </div>
-
-
 
 
         <p>
