--- a/app/views/missions/new.html.erb
+++ b/app/views/missions/new.html.erb
@@ -2,7 +2,7 @@
 	<!-- main -->
 
 <% if user_signed_in? %>
-	<div class="main-w3layouts wrapper">
+	<div class="container third-para">
 		<h1 class="title-form">NEW MISSION</h1>
     <%= simple_form_for(@mission) do |f| %>
 		  <div class="main-agileinfo">
@@ -38,7 +38,7 @@
 			<p>© Earth-Care-Project</p>
 		</div>
 		<!-- //copyright -->
-		<ul class="colorlib-bubbles">
+		<%# <ul class="colorlib-bubbles">
 			<li></li>
 			<li></li>
 			<li></li>
@@ -51,7 +51,7 @@
 			<li></li>
 		</ul>
 	</div>
-	<!-- //main -->
+	<!-- //main --> %>
 
 <% end %>
 </body-form>
