--- a/app/views/vouchers/new.html.erb
+++ b/app/views/vouchers/new.html.erb
@@ -1,4 +1,4 @@
-                                              <h1>Wallet</h1>
+                                              <h1>new voucher</h1>
 
  <%# afficher voucher et leur points %>
 
@@ -6,7 +6,7 @@
 
 
 
- 
+
 
 
 <%# aficher le nb de points de la mission
