--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -30,12 +30,16 @@
             <div class="d-flex justify-content-around">
 
               <% if current_user != @mission.user %>
-                  <%= simple_form_for [@mission, @booking] do |f| %>
-                    <%= f.submit "Accept", class: "btn btn-success" %>
-                  <% end %>
-                  <%= simple_form_for [@mission, @declined_booking] do |f| %>
-                    <%= f.submit "Decline", class: "btn btn-warning" %>
-                  <% end %>
+                <% unless @mission.users.include?(current_user) %>
+                    <%= simple_form_for [@mission, @booking] do |f| %>
+                      <%= f.submit "Accept", class: "btn btn-success" %>
+                    <% end %>
+                    <%= simple_form_for [@mission, @declined_booking] do |f| %>
+                      <%= f.submit "Decline", class: "btn btn-warning" %>
+                    <% end %>
+                <% else %>
+                  <strong><p> You are already booked for this mission ! </p> </strong>
+                <% end %>
               <% end %>
 
 
@@ -54,13 +58,13 @@
 
 
 
-        <p>
+
           <% if current_user == @mission.user %>
             <%= link_to "Edit you posted mission", edit_mission_path(@mission.id),class: "btn"  %>
-            <%= link_to "Delete your mission", mission_path(@mission), method: :delete, data: { confirm: "Are you sure?" } %>
+            <%= link_to "Delete your mission", mission_path(@mission.id), method: :delete, data: { confirm: "Are you sure?" } %>
             <%# <%= link_to "Dashboard", profil_path, data: {turbo_method: :get}, class: "btn" %>
           <% end %>
-        </p>
+
       </div>
     </div>
   </div>
