--- a/app/views/vouchers/show.html.erb
+++ b/app/views/vouchers/show.html.erb
@@ -1,9 +1,9 @@
 
  <%# <strong> You unlocked </strong> <%= @voucher.booking.mission.reward %>
-
+<div class="container second-para text-center">
   <h1>Scan this QR code to use it in our different partners</h1>
               <%= @svg.html_safe %>
-
+</div>
 <%# <%= simple_form_for([@booking, @voucher]) do |f| %>
   <%# <%= f.text_area :total_points, style: 'display:none' %>
   <%# <strong><%= f.submit "I completed my mission ", class: "btn btn-success"%>
