--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -1,6 +1,6 @@
 .page-header {
   color: #111010;
-  padding: 20px;
+  padding: 10px;
   text-align: center;
   font-size: 2rem;
   font-weight: bold;
@@ -10,6 +10,11 @@
 }
 
 .text-title {
-  margin-bottom: 30px;
+  margin-bottom: auto;
 
+}
+
+.text-is{
+  margin-top: auto;
+  font-size: medium;
 }
