--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -10,6 +10,11 @@
 }
 
 .text-title {
-  margin-bottom: 30px;
+  margin-bottom: 2px;
 
+}
+
+.text-is{
+  margin-top: auto;
+  font-size: medium;
 }
