--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -18,9 +18,9 @@
     <%# <i class="fa-solid fa-wallet"></i> %>
   <%# <% end %>
 
-  <%= link_to missions_path do %>
-    <i class="fa-solid fa-comments"></i>
-  <% end %>
+  <%# <%= link_to chatroom_path do %>
+    <%# <i class="fa-solid fa-comments"></i> %>
+  <%# <% end %>
 
   <%= link_to profile_path do %>
     <i class="fas fa-user"></i>
