--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -2,7 +2,7 @@
 
 
 
-  <div class="premier-para">
+  <div class="premier-paraf">
     <div class="container-card-profile mt-5">
       <div class="row ">
         <div class="col-lg-12">
@@ -36,7 +36,7 @@
     </div>
   </div>
 
-  <div class="premier-para">
+  <div class="premier-paraf">
     <div class="container">
       <div class="col-12">
         <div class="card card-profile-wallet">
@@ -106,10 +106,10 @@
     </div>
 
 
-    <div class="container premier-para">
+    <div class="container premier-paraf">
       <div class="container-booking">
           <div class="header-profile">
-            <h1>Creation Dashboard</h1>
+            <h1>My Missions</h1>
           </div>
           <div class="bookings">
             <% @missions.each do |mission| %>
