--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -26,43 +26,43 @@ body {
   height: 100vh;
 }
 
-.container1{
-  max-width: 1400px;
-  margin: 100 auto 0;
-  padding: 100px 20px 0;
-}
+// .container1{
+//   max-width: 1400px;
+//   margin: 100 auto 0;
+//   padding: 100px 20px 0;
+// }
 
 
-h3{
-  font-weight: bolder;
-  text-transform: uppercase;
-  color:#eadddd;
-  color: transparent;
-  font-size: 50px;;
-}
-h3 span {
-  display:inline-block;
-  position: relative;
-  overflow: hidden;
-  font-size: clamp(20px, 8vw, 100px);
-}
+// h3{
+//   font-weight: bolder;
+//   text-transform: uppercase;
+//   color:#eadddd;
+//   color: transparent;
+//   font-size: 50px;;
+// }
+// h3 span {
+//   display:inline-block;
+//   position: relative;
+//   overflow: hidden;
+//   font-size: clamp(20px, 8vw, 100px);
+// }
 
-h3 span::after{
-  content: "";
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  transform: translateX(-100%);
-}
+// h3 span::after{
+//   content: "";
+//   display: block;
+//   position: absolute;
+//   width: 100%;
+//   height: 100%;
+//   top: 0;
+//   left: 0;
+//   transform: translateX(-100%);
+// }
 
-h3:nth-child(1) {
-  font-weight: 200;
-  animation: txt-appearance 0s 1s
-  forwards;
-}
+// h3:nth-child(1) {
+//   font-weight: 200;
+//   animation: txt-appearance 0s 1s
+//   forwards;
+// }
 
 // *, ::before, ::after {
 //   box-sizing: border-box;
@@ -128,11 +128,11 @@ h3:nth-child(1) {
 //   slide-out 0.75s ease-out forwards;
 // }
 
-h3:nth-child(1) span::after{
-  background: rgb(215, 179, 95);
-  animation: slide-in 0.75s ease-out forwards,
-  slide-out 0.75s ease-out forwards;
-}
+// h3:nth-child(1) span::after{
+//   background: rgb(215, 179, 95);
+//   animation: slide-in 0.75s ease-out forwards,
+//   slide-out 0.75s ease-out forwards;
+// }
 
 
 // h3:nth-child(2) span::after{
@@ -182,47 +182,47 @@ h3:nth-child(1) span::after{
 //   animation: slide-in 0.75s 0.3s ease-out forwards,
 //   slide-out 0.75s 2s ease-out forwards;
 
-h6{
-  font-weight: bolder;
-  font-family: Monserrat, Arial, Helvetica, sans-serif;
-  text-transform: uppercase;
-  color:#b4a5a5;
-  color: transparent;
-  font-size: 15px;
-}
-h6 span {
-  display:inline-block;
-  position: relative;
-  overflow: hidden;
-  font-size: clamp(20px, 8vw, 50px);
-}
+// h6{
+//   font-weight: bolder;
+//   font-family: Monserrat, Arial, Helvetica, sans-serif;
+//   text-transform: uppercase;
+//   color:#b4a5a5;
+//   color: transparent;
+//   font-size: 15px;
+// }
+// h6 span {
+//   display:inline-block;
+//   position: relative;
+//   overflow: hidden;
+//   font-size: clamp(20px, 8vw, 50px);
+// }
 
-h6 span::after{
-  content: "";
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  transform: translateX(-100%);
-}
-
-
-
-h6:nth-child(2) {
-  animation: txt-appearance 0s 1.50s
-  forwards;
-}
+// h6 span::after{
+//   content: "";
+//   display: block;
+//   position: absolute;
+//   width: 100%;
+//   height: 100%;
+//   top: 0;
+//   left: 0;
+//   transform: translateX(-100%);
+// }
 
 
-h6:nth-child(2) span::after{
-  background: royalblue;
-  animation: slide-in 0.75s 0.3s ease-out forwards,
-  slide-out 0.75s 2s ease-out forwards;
+
+// h6:nth-child(2) {
+//   animation: txt-appearance 0s 1.50s
+//   forwards;
+// }
 
 
-}
+// h6:nth-child(2) span::after{
+//   background: royalblue;
+//   animation: slide-in 0.75s 0.3s ease-out forwards,
+//   slide-out 0.75s 2s ease-out forwards;
+
+
+// }
 
 //  @keyframes slide-in{
 //     100%{
