--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -1,12 +1,12 @@
-  <div class="page-header mt-3">
+  <div class="page-header mt-3 mb-2">
     <h4 class="text-title">Earth Care</h4>
     <span class="text-is">The More You Care, The More You Earn</span>
   </div>
-  <div class="container-fluid">
+
   <div class="container-fluid">
      <form class="d-flex">
       <form action="/search" method="GET">
-        <input type="text" name="query" placeholder="Search for missions...">
+        <input type="text" name="query" placeholder="Search or missions...">
           <button class="btn btn-outline-success" type="submit"> GO </button>
        </form>
      </form>
