--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -92,11 +92,11 @@
                     <% end %>
 
                   <% end %>
-                  
 
-                      <%= link_to mission_chatroom_path(@mission, @mission.chatroom) do %>
-                    <i class="fa-solid fa-comments"></i>
-                  <% end %>
+
+                      <%# <%= link_to mission_chatroom_path(@mission, @mission.chatroom) do %>
+                    <%# <i class="fa-solid fa-comments"></i> %>
+                  <%# <% end %> 
 
 
 
