--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,7 +3,7 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
-@import "form";
+@import "form_new_missions";
 @import "footer";
 @import "calendar";
 
