adjust home linear partners

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -64,9 +64,9 @@
 
                   <% end %>
 
-                      <%= link_to mission_chatroom_path(@mission, @mission.chatroom) do %>
-                    <i class="fa-solid fa-comments"></i>
-                  <% end %>
+                      <%# <%= link_to mission_chatroom_path(@mission, @mission.chatroom) do %>
+                    <%# <i class="fa-solid fa-comments"></i> %>
+                  <%# <% end %>
 
 
 
