--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -62,20 +62,21 @@
   <br>
   <p class="text-join-us">+100 Partners</p>
     <div class="logo-carousel">
-      <div class="carousel-container-logo slide-track">
-        <div class="logo-item"><%= image_tag('AMOr-benamor.png') %></div>
-        <div class="logo-item"><%= image_tag('Lidl-Logo.png') %></div>
-        <div class="logo-item"><%= image_tag('Fnac_Logo.png') %></div>
-        <div class="logo-item"><%= image_tag('flyer-cafe-barbesbd.jpg') %></div>
-        <div class="logo-item"><%= image_tag('Emblema-Carrefour.png') %></div>
-        <div class="logo-item"><%= image_tag('Hamoud_logo.png') %></div>
-        <div class="logo-item"><%= image_tag('logo-biocoop-2019.png') %></div>
-        <div class="logo-item"><%= image_tag('mecca-cola-logo-png-transparent.png') %></div>
-        <div class="logo-item"><%= image_tag('Darty.png') %></div>
+<div class="carousel-container-logo slide-track">
+        <div class="logo-item"><%= image_tag('AMOr-benamor.png', class: "w-100") %></div>
+        <div class="logo-item"><%= image_tag('Lidl-Logo.png', class: "h-100") %></div>
+        <div class="logo-item"><%= image_tag('Fnac_Logo.png', class: "w-100") %></div>
+        <div class="logo-item"><%= image_tag('flyer-cafe-barbesbd.jpg', class: "w-100") %></div>
+        <div class="logo-item"><%= image_tag('Emblema-Carrefour.png', class: "w-100") %></div>
+        <div class="logo-item"><%= image_tag('Hamoud_logo.png', class: "w-100") %></div>
+        <div class="logo-item"><%= image_tag('Darty.png', class: "w-100") %></div>
         <div class="logo-item"><%= image_tag('pv.png') %></div>
         <div class="logo-item"><%= image_tag('Decathlon-logo.png') %></div>
+        <div class="logo-item"><%= image_tag('Lidl-Logo.png', class: "h-100") %></div>
+        <div class="logo-item"><%= image_tag('flyer-cafe-barbesbd.jpg', class: "w-100") %></div>
+        <div class="logo-item"><%= image_tag('logo-biocoop-2019.png', class: "w-100") %></div>
       </div>
-    </div>
+  </div>
 </div>
 
 
