--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -13,9 +13,9 @@
         <span><i class="fas fa-trophy"></i>  <%= @mission.reward %> Points</span>
       </div>
 
-      <% if @mission.photo_url %>
+      <% if @mission.photo.attached? %>
         <div class="image-wrapper">
-          <%= image_tag @mission.photo_url, height: 150, class: "w-100 object-fit-cover", class: "card-img-top" %>
+          <%= cl_image_tag @mission.photo.key, height: 150, class: "w-100 object-fit-cover", class: "card-img-top" %>
         </div>
       <% end %>
       <div class="card-main-details">
