--- a/app/views/vouchers/show.html.erb
+++ b/app/views/vouchers/show.html.erb
@@ -1,13 +1,7 @@
 
  <%# <strong> You unlocked </strong> <%= @voucher.booking.mission.reward %>
 
-<div class="container second-para text-center">
-  <h1>Scan this QR code to use it in our different partners</h1>
-              <%= @svg.html_safe %>
-</div>
-
-
-  <div class="container qr code">
+  <div class="container second-para qr code">
     <br>
     <br>
     <h1 class="titre-qr code text-center mb-4 mt-2">Scan this QR code to use it in our different partners</h1>
