--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,9 +1,13 @@
 <div class="container chatroom">
-  <h1><%= @mission.title %></h1>
+  <h1>Welcome to your <%= @mission.title  %> dedicated chatroom</h1>
+
+ <strong> <h3> Hi it's <%= @mission.user.first_name %></h3></strong>
+
+  <p> let's chat !</p>
 
   <div class="messages">
     <% @chatroom.messages.each do |message| %>
-      <div id="message-<%= message.id %>">
+      <div id="message-<%= message.user %>">
         <small>
           <strong><%= message.user.nickname %></strong>
           <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
@@ -17,9 +21,10 @@
 <%= simple_form_for [@mission ,@chatroom, @message],
   html: {class: "d-flex"} do |f|
 %>
+
   <%= f.input :content,
     label: false,
-    placeholder: "Message ##{@mission.title}",
+    placeholder: "Message #{@mission.title}",
     wrapper_html: {class: "flex-grow-1"}
   %>
   <%= f.submit "Send", class: "btn btn-primary mb-3" %>
