--- a/app/views/missions/new.html.erb
+++ b/app/views/missions/new.html.erb
@@ -26,7 +26,7 @@
               <div class="clear"> </div>
             </div>
             <br>
-                  <%= f.submit %>
+                 <div class = "text-center"> <%= f.submit "Create mission", class: "btn btn-primary  p-3 m-3 mb-3 " %> </div>
     <% end %>
       </div>
 
