--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -12,7 +12,11 @@
       <%= link_to profile_path do %>
         <i class="fa-solid fa-wallet"></i>
       <% end %>
-
+<%# <% if mission.id != []%>
+  <%# <%= link_to mission_chatroom_path(@mission, @mission.chatroom) do %>
+    <%# <i class="fa-regular fa-message "></i> %>
+  <%# <% end %> 
+<%# <% end %>
 
   <%# <%= link_to booking_voucher_path(@voucher) do %>
     <%# <i class="fa-solid fa-wallet"></i> %>
